force-app/main/default/objects/Tree_Grid_Configuration__c/Tree_Grid_Configuration__c.object-meta.xml
<CustomObject>
    <label>Tree Grid Configuration</label>
    <nameField>
        <label>Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tree Grid Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>