force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Asc_Desc_Arrow_Variant__c.field-meta.xml
<CustomField>
    <fullName>Asc_Desc_Arrow_Variant__c</fullName>
    <inlineHelpText>&quot;Inverse (White color arrow) ; Error (Red); Success 
(Green) ; Warning (Orange)&quot;</inlineHelpText>
    <label>Asc-Desc Arrow Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>inverse</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>