force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Child_Object_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Relationship_Name__c</fullName>
    <label>Child Object Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>