force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Child_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Table_Name__c</fullName>
    <label>Child Table Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>