force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Child_Table_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Table_Object_Api_Name__c</fullName>
    <inlineHelpText>Api Name of the child table&apos;s object.</inlineHelpText>
    <label>Child Table Object Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>