force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Current_Table_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Table_Object_Api_Name__c</fullName>
    <label>Current Table Object Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>