force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Current_Table_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Current_Table_Object_Label__c</fullName>
    <inlineHelpText>Label of the current table&apos;s object, this will be used in the Modal pop-up upon creating or updating records.</inlineHelpText>
    <label>Current Table Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>