force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>