force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Desktop_Form_Factor_Width__c.field-meta.xml
<CustomField>
    <fullName>Desktop_Form_Factor_Width__c</fullName>
    <label>Desktop Form Factor Width</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>