force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Dynamic_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_SOQL__c</fullName>
    <label>Dynamic SOQL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>