force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Has_Child_Records__c.field-meta.xml
<CustomField>
    <fullName>Has_Child_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Child Records?</label>
    <type>Checkbox</type>
</CustomField>