force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Is_Child_Record_Creatable__c.field-meta.xml
<CustomField>
    <fullName>Is_Child_Record_Creatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Child Record Creatable ?</label>
    <type>Checkbox</type>
</CustomField>