force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Is_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Disabled</label>
    <type>Checkbox</type>
</CustomField>