force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Is_Lightning_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Lightning_Address__c</fullName>
    <formula>Data_Type__c == &apos;address&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lightning Address</label>
    <type>Checkbox</type>
</CustomField>