force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Is_Lightning_Combobox__c.field-meta.xml
<CustomField>
    <fullName>Is_Lightning_Combobox__c</fullName>
    <formula>Data_Type__c == &apos;combo-box&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lightning Combobox</label>
    <type>Checkbox</type>
</CustomField>