force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Is_Lightning_Input_Tag__c.field-meta.xml
<CustomField>
    <fullName>Is_Lightning_Input_Tag__c</fullName>
    <formula>CASE(Data_Type__c, 
    &apos;text&apos;, &apos;TRUE&apos;,
    &apos;email&apos;, &apos;TRUE&apos;,
    &apos;tel&apos;, &apos;TRUE&apos;,
    &apos;checkbox-button&apos;, &apos;TRUE&apos;,
    &apos;number&apos;, &apos;TRUE&apos;,
    &apos;date&apos;, &apos;TRUE&apos;,
    &apos;datetime&apos;, &apos;TRUE&apos;,
    &apos;checkbox&apos;, &apos;TRUE&apos;,
    &apos;password&apos;, &apos;TRUE&apos;,
    &apos;url&apos;, &apos;TRUE&apos;,
    &apos;toggle&apos;, &apos;TRUE&apos;,
    &apos;FALSE&apos;
) = &apos;TRUE&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lightning Input Tag</label>
    <type>Checkbox</type>
</CustomField>