force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Is_Lightning_Radio_Button__c.field-meta.xml
<CustomField>
    <fullName>Is_Lightning_Radio_Button__c</fullName>
    <formula>Data_Type__c == &apos;radio-group&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lightning Radio Button</label>
    <type>Checkbox</type>
</CustomField>