force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Is_Lightning_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Is_Lightning_Text_Area__c</fullName>
    <formula>Data_Type__c == &apos;text-area&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lightning Text Area</label>
    <type>Checkbox</type>
</CustomField>