force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Is_Records_Editable__c.field-meta.xml
<CustomField>
    <fullName>Is_Records_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Records Editable?</label>
    <type>Checkbox</type>
</CustomField>