force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Is_Sortable__c.field-meta.xml
<CustomField>
    <fullName>Is_Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sortable?</label>
    <type>Checkbox</type>
</CustomField>