force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Link_Href__c.field-meta.xml
<CustomField>
    <fullName>Link_Href__c</fullName>
    <inlineHelpText>&quot;Upon clicking if you want to navigate the user to its
record page specify the value as &quot;&quot;/recordId&quot;&quot;, else 
add you own logic to populate this value.&quot;</inlineHelpText>
    <label>Link Href</label>
    <length>255</length>
    <type>Text</type>
</CustomField>