force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Mobile_Form_Factor_Width__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Form_Factor_Width__c</fullName>
    <label>Mobile Form Factor Width</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>