force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Mobile_Form_Table_Vertical_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Form_Table_Vertical_Spacing__c</fullName>
    <label>Mobile Form Table Vertical Spacing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>