force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Parent_Lookup_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Lookup_Field_Api_Name__c</fullName>
    <inlineHelpText>Field Api Name of the lookup field to which the record will be mapped to.</inlineHelpText>
    <label>Parent Lookup Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>