force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <inlineHelpText>Sequence in which field should appear.</inlineHelpText>
    <label>Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>