force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Table_CSS__c.field-meta.xml
<CustomField>
    <fullName>Table_CSS__c</fullName>
    <label>Table CSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>