force-app/main/default/objects/Tree_Grid_Configuration__c/fields/Table_Record_Row_CSS__c.field-meta.xml
<CustomField>
    <fullName>Table_Record_Row_CSS__c</fullName>
    <inlineHelpText>We can use this to change the css of the record rows. For eg: background: grey</inlineHelpText>
    <label>Table Record Row CSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>