force-app/main/default/objects/Tree_Grid_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Is_Required__c</columns>
    <columns>Is_Sortable__c</columns>
    <columns>Is_Disabled__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Link_Href__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>